<resources>
    <string name="app_name">Thales</string>
    <string name="MainActivity">Thales</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="sort_title">OrderBy</string>
    <string name="sort_criteria_id_asc">ID(from lowest)</string>
    <string name="sort_criteria_id_dsc">ID(from highest)</string>
    <string name="sort_criteria_price_asc">Price(from lowest)</string>
    <string name="sort_criteria_price_dsc">Price(from highest)</string>
    <string name="sort_criteria_rating_asc">Rating(from lowest)</string>
    <string name="sort_criteria_rating_dsc">Rating(from highest)</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="enter_product_name">Enter Product Name</string>
</resources>